--- a/static/html/pages/home.html
+++ b/static/html/pages/home.html
@@ -4,6 +4,6 @@
 	<title>比比保险</title>
 </head>
 <body>
-	<div><a href="html/upload.html">创建文章</a></div>
+	<div><a href="html/pages/upload.html">创建文章</a></div>
 </body>
 </html>
