--- a/static/html/pages/home.html
+++ b/static/html/pages/home.html
@@ -4,6 +4,8 @@
 	<title>比比保险</title>
 </head>
 <body>
-	<div><a href="html/pages/upload.html">创建文章</a></div>
+	<div class="create_btn"><a href="create_company.html">创建保险公司</a></div>
+	<div class="create_btn"><a href="create_insurance.html">创建保险</a></div>
+	<div class="create_btn"><a href="create_article.html">创建文章</a></div>
 </body>
 </html>
