--- a/static/html/pages/create_article.html
+++ b/static/html/pages/create_article.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>上传文件测试</title>
+	<title>创建文章</title>
 </head>
 <body>
-	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article/" method="post">
+	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="post">
 	<div>文章名字</div>
 	<div><input type="text" name="title" /></div>
 	<div>文章描述</div>
