加入创建保险页面

--- a/static/html/pages/create_insurance.html
+++ b/static/html/pages/create_insurance.html
@@ -4,16 +4,18 @@
 	<title>上传文件测试</title>
 </head>
 <body>
-	<form enctype="multipart/form-data" action="http://120.78.175.235:8082/ceate/article" method="post">
-	<div>文章名字</div>
-	<div><input type="text" name="title" /></div>
-	<div>文章描述</div>
-	<div><input type="text" name="desc" /></div>
-	<div>文章封面</div>
+	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/ceate/insurance" method="POST">
+	<div>保险名称（中文）</div>
+	<div><input type="text" name="nameZHCN" /></div>
+	<div>保险名称（英文）</div>
+	<div><input type="text" name="nameEN" /></div>
+	<div>保险描述</div>
+ 	<div><input type="text" name="desc" /></div>
+ 	<div>保险公司ID</div>
+ 	<div><input type="number" name="companyId" /></div>
+ 	<div>保险缩略图</div>
  	<div><input type="file" name="uploadfile" /></div>
- 	<div>文章链接</div>
- 	<div><input type="text" name="url" /></div>
- 	<div><input type="submit" value="创建文章" /></div>
+ 	<div><input type="submit" value="创建保险" /></div>
 </form>
 </body>
 </html>
