--- a/static/html/pages/create_insurance.html
+++ b/static/html/pages/create_insurance.html
@@ -4,7 +4,7 @@
 	<title>上传文件测试</title>
 </head>
 <body>
-	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/ceate/insurance" method="POST">
+	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/insurance" method="POST">
 	<div>保险名称（中文）</div>
 	<div><input type="text" name="nameZHCN" /></div>
 	<div>保险名称（英文）</div>
