--- a/static/html/pages/create_article.html
+++ b/static/html/pages/create_article.html
@@ -9,6 +9,8 @@
 	<div><input type="text" name="title" /></div>
 	<div>文章描述</div>
 	<div><input type="text" name="desc" /></div>
+	<div>文章发布日期（如：2017-11-11）</div>
+	<div><input type="text" name="date" /></div>
 	<div>文章封面</div>
  	<div><input type="file" name="uploadfile" /></div>
  	<div>文章链接</div>
