--- a/static/html/pages/create_article.html
+++ b/static/html/pages/create_article.html
@@ -2,19 +2,22 @@
 <html>
 <head>
 	<title>创建文章</title>
+	<style type="text/css">
+		@import"../css/home.css"
+	</style>
 </head>
 <body>
-	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="POST">
+	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="POST" class="form-body">
 	<div>文章名字</div>
-	<div><input type="text" name="title" /></div>
+	<div><textarea type="text" name="title" cols="100" rows="1"></textarea></div>
 	<div>文章描述</div>
-	<div><input type="text" name="desc" /></div>
+	<div><textarea type="text" name="desc" cols="100" rows="3"></textarea></div>
 	<div>文章发布日期（如：2017-11-11）</div>
-	<div><input type="text" name="date" /></div>
+	<div><textarea type="text" name="date" cols="100" rows="1"></textarea></div>
 	<div>文章封面</div>
  	<div><input type="file" name="uploadfile" /></div>
  	<div>文章链接</div>
- 	<div><input type="text" name="url" /></div>
+ 	<div><textarea type="text" name="url" cols="100" rows="1"></textarea></div>
  	<div><input type="submit" value="创建文章" /></div>
 </form>
 </body>
