网站 众评保险

--- a/static/zongpingbaoxian/contact.html
+++ b/static/zongpingbaoxian/contact.html
@@ -79,8 +79,8 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="block">
-                  <h1>畅所欲言</h1>
-                  <p>您真心的建议，将会是我们下一个努力的目标。.</p>
+                  <h1 class="animated fadeInUp">畅所欲言</h1>
+                  <p class="animated fadeInUp">您真心的建议，将会是我们下一个努力的目标。.</p>
                 </div>
               </div>
             </div>
