--- a/static/zongpingbaoxian/team.html
+++ b/static/zongpingbaoxian/team.html
@@ -77,8 +77,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>我们的征途是星辰大海</h1>
-                    <p>一些人等着被世界改变，而我们已经在改变世界。</p>
+                    <h1 class="animated fadeInUp">我们的征途是星辰大海</h1>
+                    <p class="animated fadeInUp">一些人等着被世界改变，而我们已经在改变世界。</p>
                 </div>
             </div>
         </div>
