--- a/static/zongpingbaoxian/work.html
+++ b/static/zongpingbaoxian/work.html
@@ -76,8 +76,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h1>让保险属于大众</h1>
-                        <p>不要听我们说了什么，看看我们做了什么。</p>
+                        <h1 class="animated fadeInUp">让保险属于大众</h1>
+                        <p class="animated fadeInUp">不要听我们说了什么，看看我们做了什么。</p>
                     </div>
                 </div>
             </div>
