--- a/home/manager/index.html
+++ b/home/manager/index.html
@@ -7,5 +7,6 @@
 	<div class="create_btn"><a href="create_company.html">创建保险公司</a></div>
 	<div class="create_btn"><a href="create_insurance.html">创建保险</a></div>
 	<div class="create_btn"><a href="create_article.html">创建文章</a></div>
+	<div class="create_btn"><a href="create_user.html">创建用户</a></div>
 </body>
 </html>
