--- a/home/console/create_insurance.html
+++ b/home/console/create_insurance.html
@@ -3,7 +3,7 @@
 <head>
 	<title>创建保险</title>
 	<style type="text/css">
-		@import"../css/home.css"
+		@import"../css/console.css"
 	</style>
 </head>
 <body>
