--- a/home/console/index.html
+++ b/home/console/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>比比保险</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<title>众评保险</title>
+	<style type="text/css">
+		@import"../css/console.css"
+	</style>
 </head>
 <body>
 	<div class="create_btn"><a href="create_company.html">创建保险公司</a></div>
