--- a/home/console/create_article.html
+++ b/home/console/create_article.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 		@import"../css/home.css"
 	</style>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
 	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="POST" class="form-body">
