--- a/home/console/create_company.html
+++ b/home/console/create_company.html
@@ -3,8 +3,9 @@
 <head>
 	<title>创建公司</title>
 	<style type="text/css">
-		@import"../css/home.css"
+		@import"../css/console.css"
 	</style>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
 	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/company" method="POST" class="form-body">
