--- a/home/contact.html
+++ b/home/contact.html
@@ -6,6 +6,7 @@
     <title>众评保险</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
     <!-- CSS -->
