--- a/home/console/create_article.html
+++ b/home/console/create_article.html
@@ -3,7 +3,7 @@
 <head>
 	<title>创建文章</title>
 	<style type="text/css">
-		@import"../css/home.css"
+		@import"../css/console.css"
 	</style>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
