--- a/home/console/index.html
+++ b/home/console/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 	<title>众评保险</title>
 	<style type="text/css">
 		@import"../css/console.css"
