广告词  和 布局

--- a/home/team.html
+++ b/home/team.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="section-title text-center">
                 <h2>有趣的我们</h2>
-                <p> We come from the island in south China and share our concept of sharing.</p>
+                <p> We come from the island in southern of China and share our concept of sharing to the whole world.</p>
             </div>
         </div>
         <div class="row">
@@ -173,57 +173,6 @@
         </div>
     </div>
 </section>
-
-<!-- Clients Logo Section Start -->
-<section id="clients-logo-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="block">
-                    <div id="clients-logo" class="owl-carousel">
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo1.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo2.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo3.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo4.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo5.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo3.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo2.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo5.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo1.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo4.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo5.png" alt="Features">
-                        </div>
-                        <div class="clients-logo-img">
-                            <img src="img/clients/clients-logo3.png" alt="Features">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 
 <!-- Call to action Start -->
 <section id="call-to-action">
