--- a/home/work.html
+++ b/home/work.html
@@ -84,6 +84,48 @@
             </div>
         </div>
     </section>
+
+    <!-- Service Start -->
+    <section id="service">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2>我们的服务</h2>
+            <p>We do our best to provide the best service to everyone.</p>
+          </div>
+        </div>
+        <div class="row ">
+          <div class="col-sm-6 col-md-3">
+            <div class="service-item">
+              <i class="icon ion-earth"></i>
+              <h4>资讯</h4>
+              <p>我们提供最及时和最准确的保险行业信息，方便精准的排序，直观的两两对比，为大众的保险选择驱散迷雾。</p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="service-item">
+              <i class="ion-document-text"></i>
+              <h4>评分</h4>
+              <p>让大众评分，保险中的豆瓣点评，保险好坏你们说了算。 </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="service-item">
+              <i class="ion-beer"></i>
+              <h4>讨论</h4>
+              <p>保险的坑人人来说，吐槽吐个痛快。 </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="service-item">
+              <i class="ion-ios-clock"></i>
+              <h4>咨询</h4>
+              <p>专业的咨询服务，精品的服务，力求最好的满意服务。 </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
         <!-- Portfolio Start -->
     <section id="portfolio-work">
         <div class="container">
@@ -126,7 +168,7 @@
                       </li>
                       <li class="mix Graphic">
                         <a href="#">
-                          <img src="img/portfolio/work3.jpg" alt="">
+                          <img src="img/portfolio/work5.jpg" alt="">
                           <div class="overly">
                             <div class="position-center">
                               <h2>专业咨询</h2>
@@ -134,7 +176,6 @@
                               
                             </div>
                           </div>
-                          
                         </a>
                       </li>
 
@@ -153,48 +194,8 @@
           <div class="col-md-12">
             <div class="block">
               <a href="#">
-                <img src="img/weteam1.jpg" alt="">
-
+                <img src="" alt="">
               </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Service Start -->
-    <section id="service">
-      <div class="container">
-        <div class="row">
-          <div class="section-title">
-            <h2>我们的服务</h2>
-            <p>We do our best to provide the best service to everyone.</p>
-          </div>
-        </div>
-        <div class="row ">
-          <div class="col-sm-6 col-md-3">
-            <div class="service-item">
-              <i class="icon ion-coffee"></i>
-              <h4>咨询</h4>
-              <p>我们提供专业的保险咨询服务，保险详细信息的查询，私人的保险定制。</p>
-            </div>
-          </div>
-
-
-
-          <div class="col-sm-6 col-md-3">
-            <div class="service-item">
-              <i class="ion-leaf"></i>
-              <h4>App</h4>
-              <p>参与“保险大共享计划”，下载APP，随时随地关注各个保险的最新动态。 </p>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-md-3">
-            <div class="service-item">
-              <i class="ion-earth"></i>
-              <h4>网站平台</h4>
-              <p>参与“保险大共享计划”，打开网站，分享自己的见解。 </p>
             </div>
           </div>
         </div>
