--- a/home/contact.html
+++ b/home/contact.html
@@ -91,7 +91,8 @@
         <section id="contact-form">
           <div class="container">
             <div class="row">
-              <div class="col-md-6 col-sm-12">
+              <div class="col-md-1 col-sm-12"></div>
+              <div class="col-md-5 col-sm-12">
                 <div class="block">
                   <h2>Joey Cui工作室</h2>
                   <ul class="address-block">
