--- a/home/index.html
+++ b/home/index.html
@@ -28,15 +28,11 @@
     <script src="js/min/waypoints.min.js"></script>
     <script src="js/jquery.counterup.js"></script>
 
-
-
     <script src="js/main.js"></script>
 
 
   </head>
   <body>
-
-
 
     <!-- Header Start -->
   <header>
@@ -61,7 +57,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">主页</a></li>
+                    <li><a href="index.html" class="sansserif">主页</a></li>
                     <li><a href="work.html">产品</a></li>
                     <li><a href="team.html">关于我们</a></li>
                     <li><a href="contact.html">联系我们</a></li>
@@ -91,13 +87,13 @@
     <section id="intro">
       <div class="container">
         <div class="row">
-          <div class="col-md-5 col-sm-12 col-md-offset-1">
+          <div class="col-md-6 col-sm-12 col-md-offset-1">
             <div class="block">
               <div class="section-title">
-                <h2>对比保险，但不生产保险</h2>
+                <h2 align="center">对比保险，但不生产保险</h2>
               </div>
-              <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不断连接更多的优秀保险公司和产品， 接入更多的经验来满足用户多元化需求， 共同提升我们的保险服务。 </p>
-              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同时，欢迎用户分享自己的经验，这是一个属于你们的保险圈。 </p>
+              <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不断连接更多的优秀保险公司和产品， 接入更多的经验来满足用户多元化需求， 共同提升我们的保险服务。致力于提供一个平等和谐的保险讨论和评分的空间，让平台既够专业而又接地气。 </p>
+              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同时，欢迎用户分享自己的经验，这一开始就是一个属于你们自己的保险圈子。 </p>
             </div>
           </div><!-- .col-md-7 close -->
           <div class="col-md-5 col-sm-12">
@@ -112,7 +108,7 @@
   <section id="feature">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-6">
+        <div class="col-md-6 col-md-offset-7">
           <h2>我们相信伟大的想法</h2>
           <p>众评保险，</p>
           <p>以开放的平台和共享精神，</p>
