--- a/home/work.html
+++ b/home/work.html
@@ -77,8 +77,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block">
-                        <h1 class="animated fadeInUp">让保险属于大众</h1>
-                        <p class="animated fadeInUp">不要听我们说了什么，看看我们做了什么。</p>
+                        <h1 class="animated fadeInUp">让保险属于大众&nbsp;&nbsp;&nbsp;&nbsp;</h1>
+                        <p class="animated fadeInUp">不要听我们说了什么，看看我们做了什么。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
                     </div>
                 </div>
             </div>
