--- a/home/contact.html
+++ b/home/contact.html
@@ -97,6 +97,9 @@
                   <h2>Joey Cui工作室</h2>
                   <ul class="address-block">
                     <li>
+                    <i class="fa fa-windows"></i>
+                    </li>
+                    <li>
                       <i class="fa fa-map-marker"></i>东方，海南，中国
                     </li>
                     <li>
@@ -135,6 +138,7 @@
               <div class="col-md-6 col-sm-12">
                 <div class="block">
                   <form>
+                    <h2 align="left">您的反馈建议</h2>
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="您的姓名">
                     </div>
