--- a/home/index.html
+++ b/home/index.html
@@ -33,7 +33,20 @@
 
   </head>
   <body>
-
+  <script type="text/javascript">
+      $(function(){
+          var nav=$("#nav_bar"); //得到导航对象
+          var win=$(window); //得到窗口对象
+          var doc=$(document);//得到document文档对象。
+          win.scroll(function(){
+              if(doc.scrollTop()>=40){
+                  nav.addClass("nav-bar-fixed");
+              }else{
+                  nav.removeClass("nav-bar-fixed");
+              }
+          })
+      })
+  </script>
     <!-- Header Start -->
   <header>
     <div class="container">
@@ -114,7 +127,7 @@
           <p>以开放的平台和共享精神，</p>
           <p>接纳每一颗热衷分享的种子，</p>
           <p>一同繁衍它的“保险大共享计划”</p>
-          <a href="#" class="btn btn-view-works">参加计划</a>
+          <a href="work.html" class="btn btn-view-works">参加计划</a>
         </div>
       </div>
     </div>
@@ -127,9 +140,9 @@
         <div class="row">
           <div class="col-md-12">
             <div class="block">
-              <h2>我们提供绝佳的保险点评平台.</h2>
+              <h2>我们提供绝佳的保险点评平台</h2>
               <p>这里有透明的保险，大家的经验，专业的指导，简单的操作。保险，可以更大众。</p>
-              <a class="btn btn-default btn-call-to-action" href="#" >即刻开始</a>
+              <a class="btn btn-default btn-call-to-action" href="work.html" >即刻开始</a>
             </div>
           </div>
         </div>
@@ -144,9 +157,9 @@
           <div class="col-md-12">
             <div class="footer-manu">
               <ul>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">联系我们</a></li>
-                <li><a href="#">产品</a></li>
+                <li><a href="team.html">关于我们</a></li>
+                <li><a href="contact.html">联系我们</a></li>
+                <li><a href="work.html">产品</a></li>
                 <li><a href="#">支持我们</a></li>
               </ul>
             </div>
