--- a/home/team.html
+++ b/home/team.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1 class="animated fadeInUp">我们的征途是星辰大海</h1>
+                    <h1 class="animated fadeInUp" >我们的征途是星辰大海</h1>
                     <p class="animated fadeInUp">一些人等着被世界改变，而我们已经在改变世界。</p>
                 </div>
             </div>
@@ -136,37 +136,30 @@
                 <div class="testimonial-carousel">
                     <div id="testimonial-slider" class="owl-carousel">
                         <div>
-                            <img src="img/cotation.png" alt="IMG">
-                            <p>"这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话"</p>
+                            <h2 class="ion-android-contact"></h2>
+                            <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
                             <div class="user">
                                 <img src="img/item-img1.jpg" alt="Pepole">
                                 <p><span>Chuck Cui</span> 联合创始人-众评保险</p>
                             </div>
                         </div>
                         <div>
-                            <img src="img/cotation.png" alt="IMG">
-                            <p>"这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话这是一段话."</p>
+                            <h2 class="ion-android-contact"></h2>
+                            <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
                             <div class="user">
                                 <img src="img/item-img1.jpg" alt="Pepole">
                                 <p><span>Jiaming Chen</span>  联合创始人-众评保险</p>
                             </div>
                         </div>
                         <div>
-                            <img src="img/cotation.png" alt="IMG">
+                            <h2 class="ion-android-contact"></h2>
                             <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
                             <div class="user">
                                 <img src="img/item-img1.jpg" alt="Pepole">
                                 <p><span>Joey Cui</span> 联合创始人-众评保险</p>
                             </div>
                         </div>
-                        <div>
-                            <img src="img/cotation.png" alt="IMG">
-                            <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-                            <div class="user">
-                                <img src="img/item-img1.jpg" alt="Pepole">
-                                <p><span>Rose Ray</span> CEO-Themefisher</p>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -196,9 +189,9 @@
             <div class="col-md-12">
                 <div class="footer-manu">
                     <ul>
-                        <li><a href="#">关于我们</a></li>
-                        <li><a href="#">联系我们</a></li>
-                        <li><a href="#">产品</a></li>
+                        <li><a href="team.html">关于我们</a></li>
+                        <li><a href="contact.html">联系我们</a></li>
+                        <li><a href="work.html">产品</a></li>
                         <li><a href="#">支持我们</a></li>
                     </ul>
                 </div>
