--- a/home/console/create_article.html
+++ b/home/console/create_article.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>创建文章</title>
 	<style type="text/css">
-		@import"../css/console.css"
+		@import"../css/console.css";
 	</style>
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <br>
+    <h1>添加文章</h1>
+    <br>
 	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="POST" class="form-body">
 	<div>文章名字</div>
 	<div><textarea type="text" name="title" cols="100" rows="1"></textarea></div>
@@ -20,6 +24,8 @@
  	<div>文章链接</div>
  	<div><textarea type="text" name="url" cols="100" rows="1"></textarea></div>
  	<div><input type="submit" value="创建文章" /></div>
-</form>
+    </form>
+	<br><br>
+	<a href="index.html" class="button">返回主页</a>
 </body>
 </html>
