--- a/home/console/create_user.html
+++ b/home/console/create_user.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>创建用户</title>
 	<style type="text/css">
-		@import"../css/console.css"
+		@import"../css/console.css";
 	</style>
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <br>
+    <h1>添加新用户</h1>
+    <br>
 	<form enctype="multipart/form-data" action="http://120.78.175.235:8082/create/user" method="POST" class="form-body">
 	<div>用户名</div>
 	<div><textarea type="text" name="username" cols="100" rows="1"></textarea></div>
@@ -20,6 +24,8 @@
 	<div>用户头像</div>
  	<div><input type="file" name="uploadfile" /></div>
  	<div><input type="submit" value="创建用户" /></div>
-</form>
+    </form>
+	<br><br>
+	<a href="index.html" class="button">返回主页</a>
 </body>
 </html>
