--- a/home/console/index.html
+++ b/home/console/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 	<title>众评保险</title>
 	<style type="text/css">
-		@import"../css/console.css"
+		@import"../css/console.css";
 	</style>
 </head>
 <body>
@@ -12,5 +13,6 @@
 	<div class="create_btn"><a href="create_insurance.html">创建保险</a></div>
 	<div class="create_btn"><a href="create_article.html">创建文章</a></div>
 	<div class="create_btn"><a href="create_user.html">创建用户</a></div>
+	<div class="create_btn"><a href="create_insurancetype.html">创建保险种类</a></div>
 </body>
 </html>
