--- a/home/console/create_insurance.html
+++ b/home/console/create_insurance.html
@@ -17,6 +17,12 @@
  	<div><textarea type="number" name="companyId" cols="100" rows="1"></textarea></div>
  	<div>保险类型ID</div>
  	<div><textarea type="number" name="insuranceTypeId" cols="100" rows="1"></textarea></div>
+ 	<div>起始年龄</div>
+ 	<div><textarea type="number" name="ageFrom" cols="100" rows="1"></textarea></div>
+ 	<div>结束年龄</div>
+ 	<div><textarea type="number" name="ageTo" cols="100" rows="1"></textarea></div>
+ 	<div>保险标记位</div>
+ 	<div><textarea type="number" name="flags" cols="100" rows="1"></textarea></div>
  	<div>保险详细信息(JSON)</div>
  	<div><textarea type="number" name="detailData" cols="100" rows="10"></textarea></div>
  	<div>保险缩略图</div>
