--- a/home/console/create_insurance.html
+++ b/home/console/create_insurance.html
@@ -25,6 +25,10 @@
  	<div><textarea type="number" name="ageFrom" cols="100" rows="1"></textarea></div>
  	<div>结束年龄</div>
  	<div><textarea type="number" name="ageTo" cols="100" rows="1"></textarea></div>
+ 	<div>每年赔偿上限</div>
+ 	<div><textarea type="number" name="annualCompensation" cols="100" rows="1"></textarea></div>
+ 	<div>每年平均保费</div>
+ 	<div><textarea type="number" name="annualPremium" cols="100" rows="1"></textarea></div>
  	<div>保险标记位</div>
  	<div><textarea type="number" name="flags" cols="100" rows="1"></textarea></div>
  	<div>保险详细信息(JSON)</div>
