--- a/home/console/list_insurance_type.html
+++ b/home/console/list_insurance_type.html
@@ -11,6 +11,22 @@
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="../js/console/common.js"></script>
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+	
+	<script type="text/javascript">  
+	    var phoneWidth =  parseInt(window.screen.width);  
+	    var phoneScale = phoneWidth/640;  
+	    var ua = navigator.userAgent;  
+	    if (/Android (\d+\.\d+)/.test(ua)){  
+	        var version = parseFloat(RegExp.$1);  
+	        if(version>2.3){  
+	            document.write(‘<meta name="viewport" content="width=640, minimum-scale = ‘+phoneScale+‘, maximum-scale = ‘+phoneScale+‘, target-densitydpi=device-dpi">‘);  
+	        }else{  
+	            document.write(‘<meta name="viewport" content="width=640, target-densitydpi=device-dpi">‘);  
+	        }  
+	    } else {  
+	        document.write(‘<meta name="viewport" content="width=640, user-scalable=no, target-densitydpi=device-dpi">‘);  
+	    }  
+	</script>  
 </head>
 <body>
 	<div style="margin-left: 20px; margin-top: 20px"><a href="create_insurance_type.html" class="button">创建保险类型</a></div>
