--- a/home/console/list_insurance_type.html
+++ b/home/console/list_insurance_type.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
+	<meta name="viewport" content="width=640, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
 	<title>保险类型列表</title>
 	<style type="text/css">
 		@import"../css/console.css";
@@ -11,22 +11,6 @@
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="../js/console/common.js"></script>
 	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-	
-	<script type="text/javascript">  
-	    var phoneWidth =  parseInt(window.screen.width);  
-	    var phoneScale = phoneWidth/640;  
-	    var ua = navigator.userAgent;  
-	    if (/Android (\d+\.\d+)/.test(ua)){  
-	        var version = parseFloat(RegExp.$1);  
-	        if(version>2.3){  
-	            document.write(‘<meta name="viewport" content="width=640, minimum-scale = ‘+phoneScale+‘, maximum-scale = ‘+phoneScale+‘, target-densitydpi=device-dpi">‘);  
-	        }else{  
-	            document.write(‘<meta name="viewport" content="width=640, target-densitydpi=device-dpi">‘);  
-	        }  
-	    } else {  
-	        document.write(‘<meta name="viewport" content="width=640, user-scalable=no, target-densitydpi=device-dpi">‘);  
-	    }  
-	</script>  
 </head>
 <body>
 	<div style="margin-left: 20px; margin-top: 20px"><a href="create_insurance_type.html" class="button">创建保险类型</a></div>
