--- a/home/console/list_insurance_type.html
+++ b/home/console/list_insurance_type.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=640, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
 	<title>保险类型列表</title>
 	<style type="text/css">
 		@import"../css/console.css";
