--- a/home/console/create_article.html
+++ b/home/console/create_article.html
@@ -13,16 +13,17 @@
     <h1>添加文章</h1>
     <br>
 	<form enctype="multipart/form-data" action="http://120.78.175.235:8081/create/article" method="POST" class="form-body">
-	<div>文章名字</div>
-	<div><textarea type="text" name="title" cols="100" rows="1"></textarea></div>
-	<div>文章描述</div>
-	<div><textarea type="text" name="desc" cols="100" rows="3"></textarea></div>
-	<div>文章发布日期（如：2017-11-11）</div>
-	<div><textarea type="text" name="date" cols="100" rows="1"></textarea></div>
-	<div>文章封面</div>
- 	<div><input type="file" name="uploadfile" /></div>
- 	<div>文章链接</div>
- 	<div><textarea type="text" name="url" cols="100" rows="1"></textarea></div>
+	<div class="input-cell">文章名字</div>
+	<div class="input-cell"><textarea type="text" name="title" cols="100" rows="1"></textarea></div>
+	<div class="input-cell">文章描述</div>
+	<div class="input-cell"><textarea type="text" name="desc" cols="100" rows="1"></textarea></div>
+	<div class="input-cell">文章发布日期（如：2017-11-11）</div>
+	<div class="input-cell"><textarea type="text" name="date" cols="100" rows="1"></textarea></div>
+	<div class="input-cell" style="height: 30px;">
+ 		<span style="line-height: 30px">文章封面</span><span style="margin-left: 10px;"><input type="file" name="uploadfile" /></span>
+ 	</div>
+ 	<div class="input-cell">文章链接</div>
+ 	<div class="input-cell"><textarea type="text" name="url" cols="100" rows="1"></textarea></div>
  	<div><input type="submit" value="创建文章" /></div>
     </form>
 	<br><br>
